--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
           <div class="swiper-slide">
             <div class="mainslider-item   ">
             <a class="mainBanner-link" href="#">
-              <img  src="images/mainbanner.png" />
+              <img  src="images/mainBanner.png" />
             </a>
             <div class="banner-desc">
              <h1>عبايـــــات كاجـــــوال بلمســــــة عصريــــــة</h1>
@@ -132,7 +132,7 @@
           <div class="swiper-slide">
             <div class="mainslider-item   ">
             <a class="mainBanner-link" href="#">
-              <img  src="images/mainbanner.png" />
+              <img  src="images/mainBanner.png" />
             </a>
             <div class="banner-desc">
              <h1>عبايـــــات كاجـــــوال بلمســــــة عصريــــــة</h1>
